--- a/src/Components/CommentSection.css
+++ b/src/Components/CommentSection.css
@@ -2,7 +2,7 @@
 
 .comment-section {
   margin-top: 50px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .sort-buttons {
@@ -121,3 +121,15 @@
   font-size: 12px;
   color: #666; /* Adjust color */
 }
+
+.heading {
+  font-size: larger;
+  font-family: "poppins", "sans-serif";
+
+}
+
+@media screen and(max-width:426px) {
+    .heading{
+        text-align: center;
+    }
+  }
